<resources>
    <string name="app_name">Weather</string>
    <string name="home">Home</string>
    <string name="favorite">Favorites</string>
    <string name="alert">Alerts</string>
    <string name="setting">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="location">Location</string>
    <string name="language">Language</string>
    <string name="gps">GPS</string>
    <string name="map">MAP</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="temperature">Temperature</string>
    <string name="meter_sec">Meter/Sec</string>
    <string name="mile_hour">Mile/Hour</string>
    <string name="celsius">Celsius</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="kelvin">Kelvin</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="cloud">Cloud</string>
    <string name="ultraviolet">Ultraviolet</string>
    <string name="visibility">Visibility</string>
    <string name="wind">Wind</string>
    <string name="max_min">Max / Min</string>
    <string name="my_apikey">AIzaSyD6mQanVxLrWT9GKHpE57LWq6RKot0-ksg</string>
    <string name="save">Save</string>
    <string name="dropped_pin">Dropped Pin</string>
    <string name="title">Delete Favorite</string>
    <string name="message">Are you sure you want to delete this favorite?</string>
    <string name="_5_day_forecast">5-day forecast</string>
    <string name="_3_hour_forecast">3-hour forecast</string>
    <string name="weather_details">Weather Details</string>
    <string name="title_alert">Delete Alert</string>
    <string name="message_alert">Are you sure you want to delete this alert?</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="in">In</string>
    <string name="weather">Weather is</string>
    <string name="temper">and Temperature is</string>
    <string name="now">now</string>
    <string name="Weatheralert">Weather Alert</string>
    <string name="alarm_not_show">The Alarm is not allow to show</string>
</resources>