<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view">

    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home_icon"
            android:title="@string/home"/>

        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/favorite_icon"
            android:title="@string/favorite"/>

        <item
            android:id="@+id/nav_Alert"
            android:icon="@drawable/alert_icon"
            android:title="@string/alert"/>

        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/settings_icon"
            android:title="@string/setting"/>

    </group>


</menu>